test/bad/generics/nested01.px

func f<T>(): T def
    func g(): Int def
        return 1
    g()

print f()
